# osuSkinManager

./: .gitignore  Button.cpp  Button.hpp  CMakeLists.txt  Files.cpp  Files.h  GUI.cpp  GUI.h  README.md  main.cpp
testSample/!1294502915/: skin.ini
testSample/!1294502916/: skin.ini
testSample/01-bcolorful/: hitcircle@2x.psd  skin.ini
testSample/01-boop genshin/: applause.sfk  skin.ini
testSample/1 VudekNewTestNeko/: skin.ini
testSample/1 [Sytho's Skin](RafisR)/: 4K.ini  fail-background.png - Shortcut.lnk  sectionpass.ogg.sfk  skin.ini
testSample/1-HeyDT_vudek_AYAYA/: Nowyfolder.rar  VAXEI CHEAT.rar  error.txt  skin.ini  skin2.ini
testSample/1-K-12--M-2_1/: inputoverlay-background@2x.psd  score-x@2x.psd  skin.ini
